K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: node-label

  template:
    metadata:
      labels:
        app: node-label

    spec:
      containers:
        - name: node
          image: Guru5641/node:v1
          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: 100m
              memory: 64Mi

            limits:
              cpu: 200m
              memory: 128Mi
