K8s/svs.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service

spec:
  type: ClusterIP
  selector:
    app: node-label

  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
